[package]
name = "sub-script"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"

# substrate
sp-core = "3.0.0"
sp-keyring = "3.0.0"
sp-runtime = "3.0.0"
frame-metadata = { version = "13.0.0", default-features = false }
substrate-api-client = "0.6.6"
parity-scale-codec = "2.3.1"

# rhai
rhai = { version = "1.1.2", default-features = false, features = ["only_i64", "no_float", "decimal", "serde", "metadata"]}
indexmap = "1.7.0"
serde_json = { version = "1.0.68", features = ["preserve_order"] }
serde = "1.0.130"

hex = "0.4.3"
rust_decimal = "1.16.0"
smartstring = "0.2.9"

# Ledger
ledger-transport-hid = "0.8.0"
ledger-apdu = "0.8.0"
