[package]
name = "sub-script"
version = "0.8.0"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Scripting tool for Substrate chains"
keywords = ["scripting", "blockchain", "substrate", "rhai"]
repository = "https://github.com/PolymeshAssociation/sub-script"
homepage = "https://github.com/PolymeshAssociation/sub-script"

[patch.crates-io]
schnorrkel = { git = "https://github.com/PolymathNetwork/schnorrkel", branch = "rebase-head" }

[dependencies]
anyhow = "1.0.44"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
structopt = "0.3.25"

# Client
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = "1.0"
dashmap = "5.2"
url = "2.2"
ws = { version = "0.9", features = [ "ssl" ] }
crossbeam-channel = "0.5"

# substrate
sp-core = { version = "3.0", default-features = false }
sp-version = { version = "3.0", default-features = false }
sp-runtime = { version = "3.0", default-features = false }
frame-support = { version = "3.0", default-features = false }
frame-metadata = { version = "14.0.0", default-features = false, features = ["std"] }
parity-scale-codec = "2.3"

scale-info = { version = "1.0", default-features = false, optional = true }

# rhai
rhai = { version = "1.6", default-features = false, features = ["sync", "only_i64", "no_float", "decimal", "serde", "metadata"]}
indexmap = "1.8"

hex = "0.4"
rust_decimal = "1.23"
smartstring = "1.0"

# libp2p
bs58 = { version = "0.4.0", optional = true }
libp2p-core = { version = "0.32.1", optional = true }

# Ledger
ledger-transport-hid = "0.8.0"
ledger-apdu = "0.8.0"

# Polymesh
confidential_identity = { git = "https://github.com/PolymathNetwork/cryptography.git", default-features = false, tag = "confidential-identity-v2.0.0", optional = true }
confidential_identity_v1 = { package = "confidential_identity", git = "https://github.com/PolymathNetwork/cryptography.git", default-features = false, tag = "confidential-identity-v1.1.3", optional = true }
cryptography_core = { git = "https://github.com/PolymathNetwork/cryptography.git", default-features = false, tag = "confidential-identity-v1.1.3", optional = true }
polymesh-primitives = { git = "https://github.com/PolymathNetwork/Polymesh", branch = "develop", default-features = false, optional = true }

[features]
default = [ "std", "polymesh", "v12", "v13", "v14", "libp2p" ]

libp2p = [ "bs58", "libp2p-core" ]

v12 = ["frame-metadata/v12"]
v13 = ["frame-metadata/v13"]
v14 = ["frame-metadata/v14", "scale-info"]

# Backends
u64_backend = [ "confidential_identity_v1/u64_backend", "cryptography_core/u64_backend"]
#avx2_backend = [ "confidential_identity_v1/avx2_backend", "cryptography_core/avx2_backend"]

# Polymesh
polymesh = [
	"confidential_identity",
	"confidential_identity_v1",
	"cryptography_core",
	"polymesh-primitives",
]

no_std = [
	"u64_backend",
	"confidential_identity/no_std",
	"confidential_identity_v1/no_std",
	"cryptography_core/no_std",
	"polymesh-primitives/no_std",
]

std = [
	"u64_backend",
	"confidential_identity/std",
	"confidential_identity_v1/std",
	"cryptography_core/no_std",
	"cryptography_core/std",
	"polymesh-primitives/std",
]
